# swagger-output.json
@@ -1,33 +1,40 @@
 {
   "swagger": "2.0",
   "info": {
+    "version": "1.0.0",
     "title": "My API",
-    "description": "Description",
-    "version": "1.0.0"
+    "description": "Documentation automatically generated by the <b>swagger-autogen</b> module."
   },
-  "host": "localhost:27000",
-  "basePath": "",
+  "host": "127.0.0.1:27000",
+  "basePath": "/",
   "schemes": [
     "http"
   ],
   "paths": {
-    "/api/register": {
+    "/": {
       "post": {
         "description": "",
         "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          },
+          {
+            "name": "Authorization",
+            "in": "header",
+            "type": "string"
+          },
           {
             "name": "body",
             "in": "body",
             "schema": {
               "type": "object",
               "properties": {
-                "email": {
-                  "example": "any@mail.com"
-                },
-                "password": {
+                "name": {
                   "example": "any"
                 },
-                "name": {
+                "comment": {
                   "example": "any"
                 }
               }
@@ -36,90 +43,82 @@
         ],
         "responses": {
           "200": {
-            "description": "회원 가입 성공",
-            "schema":{
-              "properties": {
-                "status": {
-                  "type": "object",
-                  "example": "ok"
-                }
-              }
-            }
+            "description": "OK"
           },
-          "409": {
-            "description": "회원 가입 실패",
-            "schema":{
-              "properties": {
-                "status": {
-                  "type": "object",
-                  "example": "Conflict"
-                }
-              }
-            }
+          "400": {
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
-      }
-    },
-    "/api/login": {
+      },
       "get": {
         "description": "",
         "parameters": [
           {
-            "in": "query",
-            "name": "email",
-            "schema": {
-              "type": "object"
-            }
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
           },
           {
-            "in": "query",
-            "name": "password",
-            "schema":{
-              "type": "object"
-            }
+            "name": "Authorization",
+            "in": "header",
+            "type": "string"
           }
         ],
         "responses": {
           "200": {
-            "description": "로그인 성공",
-            "schema":{
-              "properties": {
-                "status": {
-                  "type": "object",
-                  "example": "ok"
-                }
-              }
-            }
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
           },
           "404": {
-            "description": "로그인 이메일 또는 비밀번호가 일치하지 않음",
-            "schema":{
-              "properties": {
-                "status": {
-                  "type": "object",
-                  "example": "not found"
-                },
-                "results": {
-                  "type": "object",
-                  "example": [{"target" : "password or email"}]
-                } 
-              }
-            }
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
-      }  
+      }
     },
-    "/api/sendmail/code": {
-      "post": {
-        "description": "인증 문자 보내기",
+    "/{id}": {
+      "put": {
+        "description": "",
         "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          },
+          {
+            "name": "Authorization",
+            "in": "header",
+            "type": "string"
+          },
           {
             "name": "body",
             "in": "body",
             "schema": {
               "type": "object",
               "properties": {
-                "email": {
+                "name": {
+                  "example": "any"
+                },
+                "comment": {
                   "example": "any"
                 }
               }
@@ -128,34 +127,57 @@
         ],
         "responses": {
           "200": {
-            "description": "String 인증문자를 돌려줌",
-            "schema":{
-              "properties": {
-                "status": {
-                  "type": "object",
-                  "example": "ok"
-                },
-                "results": {
-                  "type": "object",
-                  "example": [{"key" : "key value"}]
-                } 
-              }
-            }
+            "description": "OK"
           },
           "400": {
-            "description": "false를 돌려줌",
-            "schema":{
-              "properties": {
-                "status": {
-                  "type": "object",
-                  "example": "bad request"
-                },
-                "results": {
-                  "type": "object",
-                  "example": [{"key" : false}]
-                } 
-              }
-            }
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "delete": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          },
+          {
+            "name": "Authorization",
+            "in": "header",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       }
